# compound-ray

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: ConfigCompilerFlags.cmake  FindCUDA.cmake  FindOptiX.cmake  FindZlibStatic.cmake
CMake/FindCUDA/: run_nvcc.cmake
EyeRenderer3/: MulticamScene.cpp  MulticamScene.h
EyeRenderer3/cameras/: CompoundEye.cpp  PerspectiveCamera.h
cuda/: BufferView.h  GeometryData.h  Light.h  LocalGeometry.h  whitted.cu  whitted.h
data/: compound-eye-custom-properties.txt  cube.mtl  cube.ppm  natural-standin-sky.gltf  standin-sky.gltf
data/blend-files/: ofstad-acceptance-angle.blend  ofstad-speed-test.blend  ofstad-variable-acceptance-angles.blend  ofstad.blend  standin-sky.blend  test-scene.blend
data/eyes/: 1000-equidistant.eye  acceptanceAngleAdjuster.py  eye-specification.txt  eyeSplitter.py  rescaler.py  test100-avgRadius-0.1-1.0-0.02.eye  test100-avgRadius-0.1.eye  test1000-avgRadius-0.1-1.0-0.02.eye  test1000-avgRadius-0.1-10.0-0.05.eye  test1000-avgRadius-0.1-100.0-0.0.eye  test1000-avgRadius-0.1-1000.0-0.05.eye  test1000-avgRadius-0.1.eye  test1000-avgRadius-5.0(2deg).eye  test1000-horizontallyAcute-0.1degrees-avgRadius-5.0.eye  test1000-horizontallyAcute-0.5degrees-avgRadius-5.0.eye  test1000-horizontallyAcute-2.6degrees-avgRadius-0.1.eye  test1000-horizontallyAcute-2.6degrees-avgRadius-0.2.eye  test1000-horizontallyAcute-20degrees-avgRadius-5.0.eye  test1000-horizontallyAcute-50.3646440576degrees-avgRadius-0.2.eye  test1000-horizontallyAcute-variableDegree-avgRadius-0.2.eye
data/ofstad-arena/: ofstad-arena-acute-acceptance-angles-v2.gltf  ofstad-arena.gltf
data/rothamsted/: rothamsted_transform.txt
data/test-scene/: disco-cow.gltf  test-avgRadius-0.1.eye  test-scene-no-cams.gltf  test-scene-no-insect-cam.gltf  test-scene-sky.gltf  test-scene.gltf  test.eye  test100-avgRadius-0.1.eye  test100.eye
data/tools/: eyeAcceptanceAngleAdjuster.py  eyeVisualiser.py  minimalSearchResults.txt  minimumSampleRateFinder.py  objCenterer.py  varianceMapper.py
docs/: README.md  indepth-install-notes.md  windows-install-notes.md
eyeGenerator/: CMakeIncludes.cmake  CMakeLists.txt  EquilibriumGenerator.cpp  EquilibriumGenerator.h  EyeGenerator.cpp  EyeGenerator.h  NonPlanarCoordinate.cpp  NonPlanarCoordinate.h  RealEyeGenerator.h  SinesGenerator.cpp  SinewaveDropletCoordinate.cpp  SinewaveDropletCoordinate.h  SphericalCoordinate.cpp  SphericalCoordinate.h  main.cpp
eyeRenderer/: BillboardData.h  BillboardPrimitive.cpp  BillboardPrimitive.h  CMakeLists.txt  CommonObjectSbtDatas.h  PrimitiveObject.cpp  PrimitiveObject.h  SbtRecord.h  TestObjectSbt.h  TriangleMeshData.h  TriangleMeshObject.cpp  TriangleMeshObject.h  billboard.cu  cylinder.cu  eyeRenderer.cpp  eyeRenderer.cu  old.eyeRender.cpp  testObject.cu
eyeRenderer3.0/: BasicController.cpp  CMakeLists.txt  Camera.cpp  Camera.h  GenericCamera.cpp  GenericCamera.h  GenericCameraDataTypes.h  GlobalParameters.h  MulticamScene.cpp  MulticamScene.h  PanoramicCameraDataTypes.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraDataTypes.h  ThreeSixtyCamera.cpp  ThreeSixtyCamera.h  ThreeSixtyCameraDataTypes.h  Trackball.h  cudaCode.cu  eyeRenderer.cpp  ommatidialShader.cu  shaders.cu
eyeRenderer3.0/cameras/: CompoundEye.cpp  CompoundEye.h  CompoundEyeDataTypes.h  DataRecordCamera.cpp  DataRecordCamera.h  GenericCamera.cpp  GenericCamera.h  GenericCameraDataTypes.h  OrthographicCamera.h  OrthographicCameraDataTypes.h  PanoramicCamera.cpp  PanoramicCamera.h  PanoramicCameraDataTypes.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraDataTypes.h  ThreeSixtyCamera.cpp  ThreeSixtyCamera.h
eyeRenderer3GUI/: BasicController.h  MulticamScene.h  shaders.cu
eyeRenderer3GUI/cameras/: CompoundEye.cpp  (+2 more)
guiEyeRenderer3/: CMakeLists.txt  GlobalParameters.h  MulticamScene.cpp  eyeRenderer.cpp
libEyeRenderer3/: CMakeIncludes.cmake  CMakeLists.txt  GlobalParameters.h  MulticamScene.cpp  MulticamScene.h  libEyeRenderer.cpp  libEyeRenderer.h  old.CMakeIncludes.cmake  shaders.cu
libEyeRenderer3/cameras/: CompoundEye.cpp  CompoundEye.h  CompoundEyeDataTypes.h  DataRecordCamera.h  GenericCamera.h  GenericCameraDataTypes.h  OrthographicCamera.cpp  PanoramicCamera.cpp  ThreeSixtyCamera.cpp
meshCopy/: CMakeLists.txt
newGuiEyeRenderer/: BasicController.cpp  BasicController.h  CMakeLists.txt  Trackball.cpp  gui.cpp
optixCutouts/: CMakeLists.txt  optixCutouts.cpp  optixCutouts.cu  optixCutouts.h
optixDemandTexture/: CMakeLists.txt  DemandTexture.cpp  DemandTexture.h  DemandTextureManager.cpp  DemandTextureManager.h  optixDemandTexture.cpp  optixDemandTexture.cu  optixDemandTexture.h
optixDemandTextureAdvanced/: CMakeLists.txt  DemandTexture.cpp  DemandTexture.h  DemandTextureManager.cpp  DemandTextureManager.h  optixDemandTexture.cpp  optixDemandTexture.cu  optixDemandTexture.h
optixHello/: CMakeLists.txt  optixHello.cpp
optixMeshViewer/: optixMeshViewer.cpp
optixMultiGPU/: CMakeLists.txt  optixMultiGPU.cpp  optixMultiGPU.cu  optixMultiGPU.h  optixMultiGPU_kernels.cu
optixPathTracer/: optixPathTracer.cpp  optixPathTracer.h
optixRaycasting/: optixRaycasting.cpp  optixRaycasting.cu
optixSimpleMotionBlur/: optixSimpleMotionBlur.cpp  optixSimpleMotionBlur.h
optixSphere/: optixSphere.cpp  optixSphere.cu
optixTriangle/: optixTriangle.cpp  optixTriangle.cu
optixWhitted/: CMakeLists.txt  camera.cu  optixWhitted.cpp
python-examples/: eyeRendererHelperFunctions.py  primary-example.py  readme.txt  speedTest.py
surfaceEyeGenerator/: CMakeIncludes.cmake  CMakeLists.txt  EquilibriumGenerator.cpp  EquilibriumGenerator.h  NonPlanarCoordinate.cpp  NonPlanarCoordinate.h  SinesGenerator.h  SinewaveDropletCoordinate.h  SphericalCoordinate.h  Surface.cpp  Surface.h  Test.cpp  main.cpp  surfaceEyeGenerator.cpp
sutil/: Aabb.h  CMakeLists.txt  CUDAOutputBuffer.h  Exception.h  GLDisplay.cpp  Matrix.h  PPMLoader.cpp  PPMLoader.h  Scene.cpp  Scene.h  hitscanprocessing.cpp  hitscanprocessing.h  hitscanprocessingapi.h  sutil.cpp  sutil.h  sutilapi.h  vec_math.h
(+1553 files in other folders)
